# cv-MachineLearning

./: CMakeLists.txt  README.md
Data/Config_Data/: Initial.xml
Data/Icon/: icon.xcf
src/: ClasificationSystem.h  Makefile  OpenCV_ML_Tool.pro  main.cpp
src/Clasificadores/: Clasificadores.h  clasificador.h  clasificador_boosting.cpp  clasificador_boosting.h  clasificador_cascada.cpp  clasificador_cascada.h  clasificador_distancias.cpp  clasificador_distancias.h  clasificador_dtrees.cpp  clasificador_dtrees.h  clasificador_em.cpp  clasificador_em.h  clasificador_gaussiano.cpp  clasificador_gaussiano.h  clasificador_histograma.cpp  clasificador_histograma.h  clasificador_knn.cpp  clasificador_knn.h  clasificador_neuronal.cpp  clasificador_neuronal.h  clasificador_rtrees.cpp  clasificador_rtrees.h  clasificador_svm.cpp  clasificador_svm.h  miclasificador.cpp  miclasificador.h  multiclasificador.cpp  multiclasificador.h
src/Extraccion_Caracteristicas/: Caracteristicas.h  basic_transformations.cpp  basic_transformations.h  descriptor.h  descriptors.h  hog.cpp  hog.h  puntos_caracteristicos.cpp  puntos_caracteristicos.h
src/Herramientas/: Herramientas.h  analisis.cpp  analisis.h  auxiliares.cpp  auxiliares.h  busqueda.cpp  busqueda.h  clustering.cpp  clustering.h  dimensionalidad.cpp  dimensionalidad.h  generacion.cpp  generacion.h  optimizacion.cpp  optimizacion.h  representacion.cpp  representacion.h
src/gui/: con_multi.cpp  con_multi.h  con_multi.ui  conf_boosting.cpp  conf_boosting.h  conf_boosting.ui  conf_dtrees.cpp  conf_dtrees.h  conf_dtrees.ui  conf_em.cpp  conf_em.h  conf_em.ui  conf_ertrees.cpp  conf_ertrees.h  conf_ertrees.ui  conf_gb.cpp  conf_gb.h  conf_gb.ui  conf_haar.cpp  conf_haar.h  conf_haar.ui  conf_histograma.cpp  conf_histograma.h  conf_histograma.ui  conf_hog.cpp  conf_hog.h  conf_hog.ui  conf_knn.cpp  conf_knn.h  conf_knn.ui  conf_multi.cpp  conf_multi.h  conf_multi.ui  conf_neuronal.cpp  conf_neuronal.h  conf_neuronal.ui  conf_parametros.cpp  conf_parametros.h  conf_parametros.ui  conf_rtrees.cpp  (+19 more)
